# autonomy

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  RELEASE_NOTES
docs/: CODING_STANDARDS  DesignDiagram.dia  DesignDiagram2.dia  DesignDiagram3.dia
examples/: driver.autonomy  move-miner.adl  move.adl  scan-mine-return.adl
src/autonomy/: action.fwd.hpp  action.hpp  action_handler.fwd.hpp  action_handler.hpp  actor.hpp  actor_base.hpp  actor_controller.hpp  actor_group.hpp  actor_message.hpp  actor_message_type.hpp  actor_request.hpp  addressing_module.hpp  addressing_module.inc.cpp  autonomy.cpp  command_registry.cpp  command_registry.hpp  core.hpp  debug_ui.cpp  dui.cpp  dui.hpp  dui.inc.cpp  entity.fwd.hpp  entity.hpp  entity.inc.cpp  game.cpp  game.fwd.hpp  game.hpp  generic_ui.hpp  gui.hpp  gui.inc.cpp  instruction_list.hpp  location_module.cpp  location_module.hpp  location_module.inc.cpp  processor.cpp  processor.fwd.hpp  processor.hpp  script_builtins.cpp  script_builtins.hpp  script_commands.cpp  (+13 more)
src/autonomy/action/: create_asteroid.cpp  create_asteroid.fwd.hpp  create_asteroid.hpp  create_drone.cpp  create_drone.fwd.hpp  create_drone.hpp  create_station.cpp  create_station.fwd.hpp  create_station.hpp  destroy_entity.cpp  destroy_entity.fwd.hpp  destroy_entity.hpp  mine.cpp  mine.fwd.hpp  mine.hpp  move.cpp  move.fwd.hpp  move.hpp  scan.cpp  scan.fwd.hpp  scan.hpp  unload.cpp  unload.fwd.hpp  unload.hpp  where.cpp  where.fwd.hpp  where.hpp
src/autonomy/action_handler/: create_asteroid_default.cpp  create_asteroid_default.fwd.hpp  create_asteroid_default.hpp  create_drone_default.cpp  create_drone_default.fwd.hpp  create_drone_default.hpp  create_station_default.cpp  create_station_default.fwd.hpp  create_station_default.hpp  destroy_entity_default.cpp  destroy_entity_default.fwd.hpp  destroy_entity_default.hpp  mine_default.cpp  mine_default.fwd.hpp  mine_default.hpp  move_default.cpp  move_default.fwd.hpp  move_default.hpp  scan_default.cpp  scan_default.fwd.hpp  scan_default.hpp  unload_default.cpp  unload_default.fwd.hpp  unload_default.hpp  where_default.cpp  where_default.fwd.hpp  where_default.hpp
src/autonomy/compiler/: constants.hpp  lex.hpp  lexer_ids.hpp  parse.hpp  parse_node_attributes.cpp  parse_node_attributes.hpp  parser_ids.hpp  parser_translator_map.cpp  parser_translator_map.hpp  symbol_table.cpp  symbol_table.hpp  translator_exceptions.cpp  translator_exceptions.hpp  translator_functors.cpp  translator_functors.hpp  type.cpp  type.hpp
src/autonomy/entity/: asteroid.cpp  asteroid.fwd.hpp  asteroid.hpp  base_station.cpp  base_station.fwd.hpp  base_station.hpp  drone.cpp  drone.fwd.hpp  drone.hpp  fueled.hpp  script_stack.hpp  scripted_drone.cpp  scripted_drone.fwd.hpp  scripted_drone.hpp  universe.cpp  universe.fwd.hpp  universe.hpp
src/autonomy/standard/: asteroid.cpp  asteroid.fwd.hpp  asteroid.hpp  autonomy.cpp  base_station.cpp  base_station.fwd.hpp  base_station.hpp  create_asteroid.cpp  create_asteroid.fwd.hpp  create_asteroid.hpp  create_asteroid_default.cpp  create_asteroid_default.fwd.hpp  create_asteroid_default.hpp  create_drone.cpp  create_drone.fwd.hpp  create_drone.hpp  create_drone_default.cpp  create_drone_default.fwd.hpp  create_drone_default.hpp  create_station.cpp  create_station.fwd.hpp  create_station.hpp  create_station_default.cpp  create_station_default.fwd.hpp  create_station_default.hpp  destroy_entity.cpp  destroy_entity.fwd.hpp  destroy_entity.hpp  destroy_entity_default.cpp  destroy_entity_default.fwd.hpp  destroy_entity_default.hpp  drone.cpp  drone.fwd.hpp  drone.hpp  dui.cpp  dui.hpp  fueled.hpp  gui.hpp  gui.inc.cpp  mine.cpp  (+37 more)
src/autonomy/util/: coord_pair.hpp  id.hpp  serialization.hpp
src/test/feature/: actors.cpp
src/tests/: test_add_script.cpp  test_create_base_station.cpp  test_create_drone.cpp  test_script_lib.cpp
src/tests/old/: test_create_drone.cpp  test_location.cpp
